--- a/public/css/whatsapp-wpchat-public.css
+++ b/public/css/whatsapp-wpchat-public.css
@@ -3,7 +3,7 @@
  * included in this file.
  */
 
- .wac-stickytext {
+ .wac-sticky-widget {
     width: auto;
     max-width: 500px;
     height: 40px;
@@ -15,7 +15,7 @@
     z-index: 99999;
     color: white;
     text-align: left;
-    padding: 0 10px;
+    padding: 0 10px 0 20px;
     font-size: 15px;
     -webkit-border-top-left-radius: 3px;
     -webkit-border-top-right-radius: 3px;
@@ -25,7 +25,7 @@
     border-top-right-radius: 3px;
 }
 
-a.wac-stickytext:hover {
+.wac-sticky-widget a.wac-stickytext {
     color: #fff;
 }
 
